--- a/client/package.json
+++ b/client/package.json
@@ -46,7 +46,6 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/react": "^9.5.0",
-    "mock-apollo-client": "^0.4.0"
+    "@testing-library/react": "^9.5.0"
   }
 }
