--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test:debug": "react-scripts --inspect-brk=0.0.0.0:9229 test --env=jsdom --runInBand -i",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
